--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Redireccionando a aadrialo en Github</title>
-    <meta http-equiv="refresh" content="0; url=https://github.com/aadrialo">
-    <link rel="canonical" href="https://github.com/aadrialo">
+    <h1>HOLA PAGINA DE ADRI</h1>
   </head>
+
 </html>
