Create portfolio page structure in index.html
Added a complete HTML structure for a personal portfolio page, including meta tags, header, navigation, main sections, and a project showcase.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Redireccionando a aadrialo en Github</title>
-    <h1>HOLA PAGINA DE ADRI</h1>
-  </head>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>aadrialo | Ingeniero de Software</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
+    </head>
+<body>
 
-</html>
+    <header class="main-header">
+        <div class="logo">
+            <a href="#top" class="logo-link">
+                <span class="logo-prefix">//</span> Tu Nombre<span class="logo-suffix">.dev</span>
+            </a>
+        </div>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#about" class="nav-link">Sobre Mí</a></li>
+                <li><a href="#experience" class="nav-link">Experiencia</a></li>
+                <li><a href="#projects" class="nav-link">Proyectos</a></li>
+                <li><a href="#contact" class="nav-link cta-nav">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="about" class="hero-section container">
+            <p class="intro-greeting">Hola, mi nombre es...</p>
+            <h1 class="main-title">
+                [Tu Nombre Completo].
+            </h1>
+            <h2 class="subtitle">
+                Construyo soluciones digitales escalables.
+            </h2>
+            <p class="hero-description">
+                Soy un ingeniero de software especializado en el *desarrollo full-stack*. Mi enfoque se centra en la creación de aplicaciones robustas y eficientes, utilizando tecnologías modernas como **React** y **Node.js**.
+            </p>
+            <a href="cv.pdf" target="_blank" class="primary-button">
+                Descargar CV <span class="arrow-icon">&rarr;</span>
+            </a>
+        </section>
+
+        <section id="projects" class="section-padding container">
+            <h3 class="section-heading"><span class="heading-number">01.</span> Proyectos Destacados</h3>
+            
+            <div class="projects-grid">
+                <article class="project-card">
+                    <h4 class="card-title">Sistema de Gestión ERP</h4>
+                    <p class="card-description">Plataforma interna optimizada para la logística, implementada con Python (Django) y PostgreSQL.</p>
+                    <div class="tech-stack">
+                        <span>Python</span>
