--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aadrialo | Ingeniero de Software</title>
+    <title>Nombre Profesional | Ingeniero de Software</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
     </head>
@@ -50,4 +50,38 @@
                     <h4 class="card-title">Sistema de Gestión ERP</h4>
                     <p class="card-description">Plataforma interna optimizada para la logística, implementada con Python (Django) y PostgreSQL.</p>
                     <div class="tech-stack">
-                        <span>Python</span>
+                        <span>Python</span> <span>Django</span> <span>PostgreSQL</span>
+                    </div>
+                </article>
+                
+                <article class="project-card">
+                    <h4 class="card-title">API RESTful para Datos</h4>
+                    <p class="card-description">Desarrollo de una API de alto rendimiento para el procesamiento de datos en tiempo real.</p>
+                    <div class="tech-stack">
+                        <span>Node.js</span> <span>Express</span> <span>MongoDB</span>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section id="contact" class="section-padding container">
+            <h3 class="section-heading"><span class="heading-number">02.</span> Contacto</h3>
+            <p class="contact-text">
+                ¿Tienes una propuesta o quieres colaborar? Mi bandeja de entrada está abierta.
+            </p>
+            <a href="mailto:tunombre@email.com" class="primary-button email-button">
+                Envíame un Correo
+            </a>
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <p class="footer-note">Diseñado y Construido por [Tu Nombre] &copy; 2025</p>
+        <div class="social-links-footer">
+            <a href="#" target="_blank">GitHub</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
+    </footer>
+
+</body>
+</html>
