--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombre Profesional | Ingeniero de Software</title>
+    <title>aadrialo | Ingeniero de Software</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
     
     <style>
-        /* Variables y Reset Básico */
+
         :root {
-            --color-bg: #0A192F;         /* Azul marino oscuro (Fondo) */
-            --color-text-main: #CCD6F6;  /* Blanco grisáceo (Texto Principal) */
-            --color-text-secondary: #8892B0; /* Gris azulado (Descripción) */
-            --color-accent: #64FFDA;     /* Verde cian brillante (Acento) */
+            --color-bg: #0A192F;        
+            --color-text-main: #CCD6F6;
+            --color-text-secondary: #8892B0; 
+            --color-accent: #64FFDA;   
             --font-main: 'Inter', sans-serif;
             --font-mono: 'Roboto Mono', monospace;
         }
@@ -28,7 +28,7 @@
             color: var(--color-text-main);
             font-family: var(--font-main);
             line-height: 1.6;
-            -webkit-font-smoothing: antialiased; /* Mejora la apariencia del texto */
+            -webkit-font-smoothing: antialiased; 
         }
 
         /* Utilidades */
@@ -269,7 +269,7 @@
     <header class="main-header">
         <div class="logo">
             <a href="#top" class="logo-link">
-                <span class="logo-prefix">//</span> Tu Nombre<span class="logo-suffix">.dev</span>
+                <span class="logo-prefix">//</span> aadrialo<span class="logo-suffix">.dev</span>
             </a>
         </div>
         <nav class="main-nav">
@@ -285,13 +285,13 @@
         <section id="about" class="hero-section container">
             <p class="intro-greeting">Hola, mi nombre es...</p>
             <h1 class="main-title">
-                [Tu Nombre Completo].
+                aadrialo.
             </h1>
             <h2 class="subtitle">
-                Construyo soluciones digitales escalables.
+                Soy aadrialo
             </h2>
             <p class="hero-description">
-                Soy un ingeniero de software especializado en el **desarrollo full-stack**. Mi enfoque se centra en la creación de aplicaciones robustas y eficientes, utilizando tecnologías modernas como **React** y **Node.js**.
+                Soy un un estudiante de 2º de ASIR que quiere dedicarse a la ciberseguridad
             </p>
             <a href="cv.pdf" target="_blank" class="primary-button">
                 Descargar CV <span class="arrow-icon">&rarr;</span>
@@ -333,7 +333,7 @@
             <p class="hero-description" style="max-width: 500px;">
                 ¿Tienes una propuesta interesante, una consulta técnica o quieres colaborar en un proyecto? Mi bandeja de entrada siempre está abierta.
             </p>
-            <a href="mailto:tunombre@email.com" class="primary-button email-button">
+            <a href="mailto:aalopin187@ieszaidinvergeles.org" class="primary-button email-button">
                 Envíame un Correo
             </a>
         </section>
@@ -349,3 +349,4 @@
 
 </body>
 </html>
+
